gatekeeper/example/sys-gatekeeper/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-apiserver
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.2.0.1/32
        - ipBlock:
            cidr: 10.2.1.1/32
        - ipBlock:
            cidr: 10.2.2.1/32
        - ipBlock:
            cidr: 10.2.3.1/32
        - ipBlock:
            cidr: 10.2.4.1/32
        - ipBlock:
            cidr: 10.2.5.1/32
        - ipBlock:
            cidr: 10.2.6.1/32
        - ipBlock:
            cidr: 10.2.7.1/32
        - ipBlock:
            cidr: 10.2.8.1/32
        - ipBlock:
            cidr: 10.2.9.1/32
        - ipBlock:
            cidr: 10.2.10.1/32
        - ipBlock:
            cidr: 10.2.11.1/32
        - ipBlock:
            cidr: 10.2.12.1/32
        - ipBlock:
            cidr: 10.2.13.1/32
        - ipBlock:
            cidr: 10.2.14.1/32
        - ipBlock:
            cidr: 10.2.15.1/32
        - ipBlock:
            cidr: 10.2.16.1/32
        - ipBlock:
            cidr: 10.2.17.1/32
        - ipBlock:
            cidr: 10.2.18.1/32
        - ipBlock:
            cidr: 10.2.19.1/32
        - ipBlock:
            cidr: 10.2.20.1/32
        - ipBlock:
            cidr: 10.2.21.1/32
        - ipBlock:
            cidr: 10.2.22.1/32
        - ipBlock:
            cidr: 10.2.23.1/32
        - ipBlock:
            cidr: 10.2.24.1/32
        - ipBlock:
            cidr: 10.2.25.1/32
        - ipBlock:
            cidr: 10.2.26.1/32
        - ipBlock:
            cidr: 10.2.27.1/32
        - ipBlock:
            cidr: 10.2.28.1/32
        - ipBlock:
            cidr: 10.2.29.1/32
        - ipBlock:
            cidr: 10.2.30.1/32
        - ipBlock:
            cidr: 10.2.31.1/32
        - ipBlock:
            cidr: 10.2.32.1/32
        - ipBlock:
            cidr: 10.2.33.1/32
        - ipBlock:
            cidr: 10.2.34.1/32
        - ipBlock:
            cidr: 10.2.35.1/32
        - ipBlock:
            cidr: 10.2.36.1/32
        - ipBlock:
            cidr: 10.2.37.1/32
        - ipBlock:
            cidr: 10.2.38.1/32
        - ipBlock:
            cidr: 10.2.39.1/32
        - ipBlock:
            cidr: 10.2.40.1/32
        - ipBlock:
            cidr: 10.2.41.1/32
        - ipBlock:
            cidr: 10.2.42.1/32
        - ipBlock:
            cidr: 10.2.43.1/32
        - ipBlock:
            cidr: 10.2.44.1/32
        - ipBlock:
            cidr: 10.2.45.1/32
        - ipBlock:
            cidr: 10.2.46.1/32
        - ipBlock:
            cidr: 10.2.47.1/32
        - ipBlock:
            cidr: 10.2.48.1/32
        - ipBlock:
            cidr: 10.2.49.1/32
        - ipBlock:
            cidr: 10.2.50.1/32
        - ipBlock:
            cidr: 10.2.51.1/32
        - ipBlock:
            cidr: 10.2.52.1/32
        - ipBlock:
            cidr: 10.2.53.1/32
        - ipBlock:
            cidr: 10.2.54.1/32
        - ipBlock:
            cidr: 10.2.55.1/32
        - ipBlock:
            cidr: 10.2.56.1/32
        - ipBlock:
            cidr: 10.2.57.1/32
        - ipBlock:
            cidr: 10.2.58.1/32
        - ipBlock:
            cidr: 10.2.59.1/32
        - ipBlock:
            cidr: 10.2.60.1/32
        - ipBlock:
            cidr: 10.2.61.1/32
        - ipBlock:
            cidr: 10.2.62.1/32
        - ipBlock:
            cidr: 10.2.63.1/32
        - ipBlock:
            cidr: 10.2.64.1/32
        - ipBlock:
            cidr: 10.2.65.1/32
        - ipBlock:
            cidr: 10.2.66.1/32
        - ipBlock:
            cidr: 10.2.67.1/32
        - ipBlock:
            cidr: 10.2.68.1/32
        - ipBlock:
            cidr: 10.2.69.1/32
        - ipBlock:
            cidr: 10.2.70.1/32
        - ipBlock:
            cidr: 10.2.71.1/32
        - ipBlock:
            cidr: 10.2.72.1/32
        - ipBlock:
            cidr: 10.2.73.1/32
        - ipBlock:
            cidr: 10.2.74.1/32
        - ipBlock:
            cidr: 10.2.75.1/32
        - ipBlock:
            cidr: 10.2.76.1/32
        - ipBlock:
            cidr: 10.2.77.1/32
        - ipBlock:
            cidr: 10.2.78.1/32
        - ipBlock:
            cidr: 10.2.79.1/32
        - ipBlock:
            cidr: 10.2.80.1/32
        - ipBlock:
            cidr: 10.2.81.1/32
        - ipBlock:
            cidr: 10.2.82.1/32
        - ipBlock:
            cidr: 10.2.83.1/32
        - ipBlock:
            cidr: 10.2.84.1/32
        - ipBlock:
            cidr: 10.2.85.1/32
        - ipBlock:
            cidr: 10.2.86.1/32
        - ipBlock:
            cidr: 10.2.87.1/32
        - ipBlock:
            cidr: 10.2.88.1/32
        - ipBlock:
            cidr: 10.2.89.1/32
        - ipBlock:
            cidr: 10.2.90.1/32
        - ipBlock:
            cidr: 10.2.91.1/32
        - ipBlock:
            cidr: 10.2.92.1/32
        - ipBlock:
            cidr: 10.2.93.1/32
        - ipBlock:
            cidr: 10.2.94.1/32
        - ipBlock:
            cidr: 10.2.95.1/32
        - ipBlock:
            cidr: 10.2.96.1/32
        - ipBlock:
            cidr: 10.2.97.1/32
        - ipBlock:
            cidr: 10.2.98.1/32
        - ipBlock:
            cidr: 10.2.99.1/32
        - ipBlock:
            cidr: 10.2.100.1/32
        - ipBlock:
            cidr: 10.2.101.1/32
        - ipBlock:
            cidr: 10.2.102.1/32
        - ipBlock:
            cidr: 10.2.103.1/32
        - ipBlock:
            cidr: 10.2.104.1/32
        - ipBlock:
            cidr: 10.2.105.1/32
        - ipBlock:
            cidr: 10.2.106.1/32
        - ipBlock:
            cidr: 10.2.107.1/32
        - ipBlock:
            cidr: 10.2.108.1/32
        - ipBlock:
            cidr: 10.2.109.1/32
        - ipBlock:
            cidr: 10.2.110.1/32
        - ipBlock:
            cidr: 10.2.111.1/32
        - ipBlock:
            cidr: 10.2.112.1/32
        - ipBlock:
            cidr: 10.2.113.1/32
        - ipBlock:
            cidr: 10.2.114.1/32
        - ipBlock:
            cidr: 10.2.115.1/32
        - ipBlock:
            cidr: 10.2.116.1/32
        - ipBlock:
            cidr: 10.2.117.1/32
        - ipBlock:
            cidr: 10.2.118.1/32
        - ipBlock:
            cidr: 10.2.119.1/32
        - ipBlock:
            cidr: 10.2.120.1/32
        - ipBlock:
            cidr: 10.2.121.1/32
        - ipBlock:
            cidr: 10.2.122.1/32
        - ipBlock:
            cidr: 10.2.123.1/32
        - ipBlock:
            cidr: 10.2.124.1/32
        - ipBlock:
            cidr: 10.2.125.1/32
        - ipBlock:
            cidr: 10.2.126.1/32
        - ipBlock:
            cidr: 10.2.127.1/32
        - ipBlock:
            cidr: 10.2.128.1/32
        - ipBlock:
            cidr: 10.2.129.1/32
        - ipBlock:
            cidr: 10.2.130.1/32
        - ipBlock:
            cidr: 10.2.131.1/32
        - ipBlock:
            cidr: 10.2.132.1/32
        - ipBlock:
            cidr: 10.2.133.1/32
        - ipBlock:
            cidr: 10.2.134.1/32
        - ipBlock:
            cidr: 10.2.135.1/32
        - ipBlock:
            cidr: 10.2.136.1/32
        - ipBlock:
            cidr: 10.2.137.1/32
        - ipBlock:
            cidr: 10.2.138.1/32
        - ipBlock:
            cidr: 10.2.139.1/32
        - ipBlock:
            cidr: 10.2.140.1/32
        - ipBlock:
            cidr: 10.2.141.1/32
        - ipBlock:
            cidr: 10.2.142.1/32
        - ipBlock:
            cidr: 10.2.143.1/32
        - ipBlock:
            cidr: 10.2.144.1/32
        - ipBlock:
            cidr: 10.2.145.1/32
        - ipBlock:
            cidr: 10.2.146.1/32
        - ipBlock:
            cidr: 10.2.147.1/32
        - ipBlock:
            cidr: 10.2.148.1/32
        - ipBlock:
            cidr: 10.2.149.1/32
        - ipBlock:
            cidr: 10.2.150.1/32
        - ipBlock:
            cidr: 10.2.151.1/32
        - ipBlock:
            cidr: 10.2.152.1/32
        - ipBlock:
            cidr: 10.2.153.1/32
        - ipBlock:
            cidr: 10.2.154.1/32
        - ipBlock:
            cidr: 10.2.155.1/32
        - ipBlock:
            cidr: 10.2.156.1/32
        - ipBlock:
            cidr: 10.2.157.1/32
        - ipBlock:
            cidr: 10.2.158.1/32
        - ipBlock:
            cidr: 10.2.159.1/32
        - ipBlock:
            cidr: 10.2.160.1/32
        - ipBlock:
            cidr: 10.2.161.1/32
        - ipBlock:
            cidr: 10.2.162.1/32
        - ipBlock:
            cidr: 10.2.163.1/32
        - ipBlock:
            cidr: 10.2.164.1/32
        - ipBlock:
            cidr: 10.2.165.1/32
        - ipBlock:
            cidr: 10.2.166.1/32
        - ipBlock:
            cidr: 10.2.167.1/32
        - ipBlock:
            cidr: 10.2.168.1/32
        - ipBlock:
            cidr: 10.2.169.1/32
        - ipBlock:
            cidr: 10.2.170.1/32
        - ipBlock:
            cidr: 10.2.171.1/32
        - ipBlock:
            cidr: 10.2.172.1/32
        - ipBlock:
            cidr: 10.2.173.1/32
        - ipBlock:
            cidr: 10.2.174.1/32
        - ipBlock:
            cidr: 10.2.175.1/32
        - ipBlock:
            cidr: 10.2.176.1/32
        - ipBlock:
            cidr: 10.2.177.1/32
        - ipBlock:
            cidr: 10.2.178.1/32
        - ipBlock:
            cidr: 10.2.179.1/32
        - ipBlock:
            cidr: 10.2.180.1/32
        - ipBlock:
            cidr: 10.2.181.1/32
        - ipBlock:
            cidr: 10.2.182.1/32
        - ipBlock:
            cidr: 10.2.183.1/32
        - ipBlock:
            cidr: 10.2.184.1/32
        - ipBlock:
            cidr: 10.2.185.1/32
        - ipBlock:
            cidr: 10.2.186.1/32
        - ipBlock:
            cidr: 10.2.187.1/32
        - ipBlock:
            cidr: 10.2.188.1/32
        - ipBlock:
            cidr: 10.2.189.1/32
        - ipBlock:
            cidr: 10.2.190.1/32
        - ipBlock:
            cidr: 10.2.191.1/32
        - ipBlock:
            cidr: 10.2.192.1/32
        - ipBlock:
            cidr: 10.2.193.1/32
        - ipBlock:
            cidr: 10.2.194.1/32
        - ipBlock:
            cidr: 10.2.195.1/32
        - ipBlock:
            cidr: 10.2.196.1/32
        - ipBlock:
            cidr: 10.2.197.1/32
        - ipBlock:
            cidr: 10.2.198.1/32
        - ipBlock:
            cidr: 10.2.199.1/32
        - ipBlock:
            cidr: 10.2.200.1/32
        - ipBlock:
            cidr: 10.2.201.1/32
        - ipBlock:
            cidr: 10.2.202.1/32
        - ipBlock:
            cidr: 10.2.203.1/32
        - ipBlock:
            cidr: 10.2.204.1/32
        - ipBlock:
            cidr: 10.2.205.1/32
        - ipBlock:
            cidr: 10.2.206.1/32
        - ipBlock:
            cidr: 10.2.207.1/32
        - ipBlock:
            cidr: 10.2.208.1/32
        - ipBlock:
            cidr: 10.2.209.1/32
        - ipBlock:
            cidr: 10.2.210.1/32
        - ipBlock:
            cidr: 10.2.211.1/32
        - ipBlock:
            cidr: 10.2.212.1/32
        - ipBlock:
            cidr: 10.2.213.1/32
        - ipBlock:
            cidr: 10.2.214.1/32
        - ipBlock:
            cidr: 10.2.215.1/32
        - ipBlock:
            cidr: 10.2.216.1/32
        - ipBlock:
            cidr: 10.2.217.1/32
        - ipBlock:
            cidr: 10.2.218.1/32
        - ipBlock:
            cidr: 10.2.219.1/32
        - ipBlock:
            cidr: 10.2.220.1/32
        - ipBlock:
            cidr: 10.2.221.1/32
        - ipBlock:
            cidr: 10.2.222.1/32
        - ipBlock:
            cidr: 10.2.223.1/32
        - ipBlock:
            cidr: 10.2.224.1/32
        - ipBlock:
            cidr: 10.2.225.1/32
        - ipBlock:
            cidr: 10.2.226.1/32
        - ipBlock:
            cidr: 10.2.227.1/32
        - ipBlock:
            cidr: 10.2.228.1/32
        - ipBlock:
            cidr: 10.2.229.1/32
        - ipBlock:
            cidr: 10.2.230.1/32
        - ipBlock:
            cidr: 10.2.231.1/32
        - ipBlock:
            cidr: 10.2.232.1/32
        - ipBlock:
            cidr: 10.2.233.1/32
        - ipBlock:
            cidr: 10.2.234.1/32
        - ipBlock:
            cidr: 10.2.235.1/32
        - ipBlock:
            cidr: 10.2.236.1/32
        - ipBlock:
            cidr: 10.2.237.1/32
        - ipBlock:
            cidr: 10.2.238.1/32
        - ipBlock:
            cidr: 10.2.239.1/32
        - ipBlock:
            cidr: 10.2.240.1/32
        - ipBlock:
            cidr: 10.2.241.1/32
        - ipBlock:
            cidr: 10.2.242.1/32
        - ipBlock:
            cidr: 10.2.243.1/32
        - ipBlock:
            cidr: 10.2.244.1/32
        - ipBlock:
            cidr: 10.2.245.1/32
        - ipBlock:
            cidr: 10.2.246.1/32
        - ipBlock:
            cidr: 10.2.247.1/32
        - ipBlock:
            cidr: 10.2.248.1/32
        - ipBlock:
            cidr: 10.2.249.1/32
        - ipBlock:
            cidr: 10.2.250.1/32
        - ipBlock:
            cidr: 10.2.251.1/32
        - ipBlock:
            cidr: 10.2.252.1/32
        - ipBlock:
            cidr: 10.2.253.1/32
        - ipBlock:
            cidr: 10.2.254.1/32
        - ipBlock:
            cidr: 10.2.255.1/32
